# point-cloud-processing

./: .gitignore  Readme.md  change.stl  cloud_clustered1.pcd  cloud_clustered2.pcd  data2.pcd  filtered.pcd  four_add_filter4.pcd  main  readme.md  副反模型-加工状态（公开）stl.stl
cluster/cpp/src/: CMakeLists.txt  cluster.cpp  cluster.h  don.cpp  main.cpp
cluster/python/: cloud_segmentation.py  main.py  ransac_and_segmentation.py  rock.csv  rocks_segmentation.py  rocks_segmentation_new.py  visualize_point_cloud.py  xianchang2.txt
compression/src/: CMakeLists.txt  Readme.md  main.cpp  octree_compression.cpp  octree_uncompression.cpp  zlib_compression.cpp  zlib_uncompression.cpp  zpipe.cpp  zpipe.h
convertor/python/: convert_Gocator_to_ply.py
convertor/src/: CMakeLists.txt  Mesh.cpp  Mesh.h  main.cpp
measure/cpp/: CMakeLists.txt  main.cpp
measure/cpp/src/: CMakeLists.txt  main.cpp  measure.cpp  measure.h
measure/data/: tubedatamm.mat
measure/matlab/: error_calculation.m
measure/python/: cylinder_fit.py
point_cloud_tool/: main.py  point_cloud.py
projection/: CMakeLists.txt  main.cpp  measure.cpp  measure.h  utils.cpp  utils.h
rockToEcllipsoid/rockSmoothing/: CMakeLists.txt  rock_smoothing.cpp
rockToEcllipsoid/rockToEclipsoid/: CMakeLists.txt  main copy.cpp  main.cpp
seeds/: completion_for_volume.py
slice_scan/src/: CMakeLists.txt  Geometry.h  Mesh.cpp  Mesh.h  main.cpp
visualize/: visualize_depthmap.py
volume/: ReadMe.md
volume/Dataset/: class_names.txt
volume/Dataset/SegmentationClass/: 94.npy  95.npy
volume/Matlab/: Depth_88.raw  Depth_89.raw  main.m
volume/images/: 94.json  95.json  Depth_82.raw  Depth_91.raw  Depth_92.raw  Depth_93.raw  Depth_94.raw  Depth_95.raw
volume/pointcloud/: point95_new.ply
volume/python/: main.py  test.py  volume.py
